Update SEO metadata and image references in index.html

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
 <title>EuroVantage — Advance with Confidence. Arrive in Style.</title>
 
 <!-- ✅ SEO Meta -->
-<meta name="title" content="EuroVantage Advance with Confidence. Arrive in Style.">
+<meta name="title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta name="description" content="EuroVantage connects skilled professionals with verified European work and travel opportunities. Advance your career with confidence and arrive in style.">
 <meta name="keywords" content="EuroVantage, European jobs, work abroad, visa support, travel agency, Ghana jobs, recruitment Europe, job placement, overseas work">
-<!-- ✅ Structured Data for SEO (Image + Brand) -->
+
+<!-- ✅ Structured Data -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "EuroVantage",
   "url": "https://www.eurovantage.com/",
-  "logo": "https://i.postimg.cc/tTFBXnrX/file_00000000e9947230a50f0ca39b29f237.png",
-  "image": "https://i.postimg.cc/xTkZ1DQk/file-000000003a4071f589514f7a31460156.png",
+  "logo": "https://www.eurovantage.com/images/logo.png",
+  "image": "https://www.eurovantage.com/images/og-cover.jpg",
   "description": "EuroVantage connects skilled professionals with verified European work and travel opportunities.",
   "sameAs": [
     "https://www.facebook.com/eurovantage",
@@ -29,17 +30,20 @@
 <!-- ✅ Open Graph -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.eurovantage.com/">
-<meta property="og:title" content="EuroVantage Advance with Confidence. Arrive in Style.">
+<meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today.">
-<meta property="og:image" content="https://i.postimg.cc/xTkZ1DQk/file-000000003a4071f589514f7a31460156.png">
+<meta property="og:image" content="https://www.eurovantage.com/images/og-cover.jpg">
+<meta property="og:image:secure_url" content="https://www.eurovantage.com/images/og-cover.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
 <!-- ✅ Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:title" content="EuroVantage  Advance with Confidence. Arrive in Style.">
-<meta property="twitter:description" content="Find verified European jobs with EuroVantage — trusted visa and work support agency.">
-<meta property="twitter:image" content="https://i.postimg.cc/xTkZ1DQk/file-000000003a4071f589514f7a31460156.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
+<meta name="twitter:description" content="Find verified European jobs with EuroVantage — trusted visa and work support agency.">
+<meta name="twitter:image" content="https://www.eurovantage.com/images/og-cover.jpg">
 
-<link rel="icon" href="favicon.png">
+<link rel="icon" href="/images/favicon.png">
 
 <style>
 :root {
@@ -454,8 +458,7 @@ header h1 {
 
 .hero {
   height: 43vh;
-  background: url("https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png")
-    center/cover no-repeat;
+  background: url("/images/hero.jpg") center/cover no-repeat;
 }
 
 
@@ -564,10 +567,11 @@ header h1 {
 
 <header>
   <div class="logo-wrap">
-  <img src="https://i.postimg.cc/sDTwDrJS/file-00000000b6d471f8b68cb9c69408ef3e.png" 
-       alt="EuroVantage Logo" 
-       width="190" height="90" 
-       style="display:block;">
+<img src="/images/logo.png"
+     alt="EuroVantage Logo"
+     width="190"
+     height="90"
+     style="display:block;">
 </div>
 
     <nav class="sub-nav">
