Correct CSS errors in team section and media query
Fix background property typo and update media query breakpoint.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ nav a:hover { color: var(--gold); }
 .team {
   text-align: center;
   padding: 60px 20px;
-  background: #0a0a0a;
+  baSpacesckground: #0a0a0a;
 }
 .team h3 {
   color: var(--gold);
@@ -502,7 +502,7 @@ header h1 {
   color: #fff;
 }
 
-@media (max-width: 43px) {
+@media (max-width: 768px) {
   .hero {
     height: 50vh;
     background-position: center top;
