--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 <meta property="og:url" content="https://www.eurovantage.com/">
 <meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today.">
-<meta property="og:image" content="https://www.eurovantage.com/images/og-cover.jpg">
-<meta property="og:image:secure_url" content="https://www.eurovantage.com/images/og-cover.jpg">
+<meta property="og:site_name" content="EuroVantage">
+<meta property="og:locale" content="en_US">
+<meta property="og:image" content="https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png">
+<meta property="og:image:secure_url" content="https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
@@ -70,7 +72,7 @@ nav a:hover { color: var(--gold); }
 .team {
   text-align: center;
   padding: 60px 20px;
-  baSpacesckground: #0a0a0a;
+  background: #0a0a0a;
 }
 .team h3 {
   color: var(--gold);
@@ -458,7 +460,8 @@ header h1 {
 
 .hero {
   height: 43vh;
-  background: url("/images/hero.jpg") center/cover no-repeat;
+  background: url("https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png")
+    center/cover no-repeat;
 }
 
 
@@ -502,7 +505,7 @@ header h1 {
   color: #fff;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 43px) {
   .hero {
     height: 50vh;
     background-position: center top;
@@ -567,11 +570,10 @@ header h1 {
 
 <header>
   <div class="logo-wrap">
-<img src="/images/logo.png"
-     alt="EuroVantage Logo"
-     width="190"
-     height="90"
-     style="display:block;">
+  <img src="https://i.postimg.cc/sDTwDrJS/file-00000000b6d471f8b68cb9c69408ef3e.png" 
+       alt="EuroVantage Logo" 
+       width="190" height="90" 
+       style="display:block;">
 </div>
 
     <nav class="sub-nav">
