--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   "@type": "Organization",
   "name": "EuroVantage",
   "url": "https://www.eurovantage.com/",
-  "logo": "https://i.postimg.cc/sDTwDrJS/file-00000000b6d471f8b68cb9c69408ef3e.png",
-  "image": "https://i.postimg.cc/xTkZ1DQk/file_000000003a4071f589514f7a31460156.png",
+  "logo": "https://i.postimg.cc/qRrKbbyV/Banner.png",
+  "image": "https://i.postimg.cc/qRrKbbyV/Banner.png",
   "description": "EuroVantage connects skilled professionals with verified European work and travel opportunities.",
   "sameAs": [
     "https://www.facebook.com/eurovantage",
@@ -34,8 +34,8 @@
 <meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today.">
 <meta property="og:site_name" content="EuroVantage">
 <meta property="og:locale" content="en_US">
-<meta property="og:image" content="https://i.postimg.cc/xTkZ1DQk/file_000000003a4071f589514f7a31460156.png">
-<meta property="og:image:secure_url" content="https://i.postimg.cc/xTkZ1DQk/file_000000003a4071f589514f7a31460156.png">
+<meta property="og:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png">
+<meta property="og:image:secure_url" content="https://i.postimg.cc/qRrKbbyV/Banner.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support">
@@ -44,7 +44,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta name="twitter:description" content="Find verified European jobs with EuroVantage — trusted visa and work support agency.">
-<meta name="twitter:image" content="https://i.postimg.cc/xTkZ1DQk/file_000000003a4071f589514f7a31460156.png">
+<meta name="twitter:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png">
 
 <link rel="icon" href="/images/favicon.png">
      <style>
