--- a/index.html
+++ b/index.html
@@ -28,25 +28,26 @@
 </script>
 
 <!-- ✅ Open Graph (Facebook, WhatsApp, LinkedIn) -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.eurovantage.com/">
-<meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
-<meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today.">
-<meta property="og:site_name" content="EuroVantage">
-<meta property="og:locale" content="en_US">
-<meta property="og:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png">
-<meta property="og:image:secure_url" content="https://i.postimg.cc/qRrKbbyV/Banner.png">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://eurovantage.work.gd/index.html" />
+<meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style." />
+<meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage." />
+<meta property="og:site_name" content="EuroVantage" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png" />
+<meta property="og:image:secure_url" content="https://i.postimg.cc/qRrKbbyV/Banner.png" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support" />
 
 <!-- ✅ Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
-<meta name="twitter:description" content="Find verified European jobs with EuroVantage — trusted visa and work support agency.">
-<meta name="twitter:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png">
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style." />
+<meta name="twitter:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage." />
+<meta name="twitter:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png" />
 
-<link rel="icon" href="/images/favicon.png">
+<link rel="icon" href="/images/favicon.png" />
      <style>
 :root {
   --gold: #d4af37;
