--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <meta property="og:locale" content="en_US" />
 <meta property="og:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png" />
 <meta property="og:image:secure_url" content="https://i.postimg.cc/qRrKbbyV/Banner.png" />
-<meta property="og:image:type" content="https://i.postimg.cc/j5zMsSbr/Screenshot-20260130-141420-2.jpg" />
+<meta property="og:image:type" content="https://i.postimg.cc/sDTwDrJS/file_00000000b6d471f8b68cb9c69408ef3e.png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 <meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support" />
