--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "EuroVantage",
-  "url": "https://www.eurovantage.com/",
+  "url": "https://eurovantage.work.gd/",
   "logo": "https://i.postimg.cc/qRrKbbyV/Banner.png",
   "image": "https://i.postimg.cc/qRrKbbyV/Banner.png",
   "description": "EuroVantage connects skilled professionals with verified European work and travel opportunities.",
@@ -27,19 +27,20 @@
 }
 </script>
 
-<!-- ✅ Open Graph (Facebook, WhatsApp, LinkedIn) -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://eurovantage.work.gd/index.html" />
-<meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style." />
-<meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage." />
-<meta property="og:site_name" content="EuroVantage" />
-<meta property="og:locale" content="en_US" />
-<meta property="og:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png" />
-<meta property="og:image:secure_url" content="https://i.postimg.cc/qRrKbbyV/Banner.png" />
-<meta property="og:image:type" content="https://i.postimg.cc/pXp5M1xT/Screenshot-20260130-imresizer.jpg" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
-<meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support" />
+<!-- ✅ Open Graph (WhatsApp / Facebook) -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://eurovantage.work.gd/index.html">
+<meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
+<meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage.">
+<meta property="og:site_name" content="EuroVantage">
+<meta property="og:locale" content="en_US">
+
+<meta property="og:image" content="https://eurovantage.work.gd/og-image.jpg">
+<meta property="og:image:secure_url" content="https://eurovantage.work.gd/og-image.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support">
 
 <!-- ✅ Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
@@ -920,7 +921,7 @@ document.addEventListener("DOMContentLoaded", () => {
     setInterval(() => {
       new Notification("💼 New European Jobs Available", {
         body: "Check the latest verified job openings on EuroVantage.",
-        icon: "https://www.eurovantage.com/images/eurovantage-hero.jpg"
+        icon: "https://eurovantage.work.gd/images/eurovantage-hero.jpg"
       });
     }, 1000 * 60 * 60 * 6); // every 6 hours
   }
@@ -932,7 +933,7 @@ document.addEventListener("DOMContentLoaded", () => {
         startJobNotifications();
         new Notification("✅ Notifications Enabled!", {
           body: "You'll now receive updates on new job openings.",
-          icon: "https://www.eurovantage.com/images/eurovantage-hero.jpg"
+          icon: "https://eurovantage.work.gd/images/eurovantage-hero.jpg"
         });
       }
       closePushPrompt();
