--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
 <title>EuroVantage — Advance with Confidence. Arrive in Style.</title>
 
 <!-- ✅ SEO Meta -->
+<!-- ✅ SEO Meta -->
 <meta name="title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta name="description" content="EuroVantage connects skilled professionals with verified European work and travel opportunities. Advance your career with confidence and arrive in style.">
 <meta name="keywords" content="EuroVantage, European jobs, work abroad, visa support, travel agency, Ghana jobs, recruitment Europe, job placement, overseas work">
 
-<!-- ✅ Structured Data (FIXED & VALID) -->
+<!-- ✅ Structured Data (Organization) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "EuroVantage",
   "url": "https://eurovantage.work.gd/",
-  "logo": "https://i.postimg.cc/qRrKbbyV/Banner.png",
-  "image": "https://i.postimg.cc/qRrKbbyV/Banner.png",
+  "logo": "https://eurovantage.work.gd/image/og-image.jpg",
+  "image": "https://eurovantage.work.gd/image/og-image.jpg",
   "description": "EuroVantage connects skilled professionals with verified European work and travel opportunities.",
   "sameAs": [
     "https://www.facebook.com/eurovantage",
@@ -27,28 +28,29 @@
 }
 </script>
 
-<!-- ✅ Open Graph (WhatsApp / Facebook) -->
+<!-- ✅ Open Graph (WhatsApp / Facebook / LinkedIn) -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://eurovantage.work.gd/index.html">
+<meta property="og:url" content="https://eurovantage.work.gd/">
 <meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage.">
 <meta property="og:site_name" content="EuroVantage">
 <meta property="og:locale" content="en_US">
 
-<meta property="og:image" content="https://eurovantage.work.gd/og-image.jpg">
-<meta property="og:image:secure_url" content="https://eurovantage.work.gd/og-image.jpg">
+<meta property="og:image" content="https://eurovantage.work.gd/image/og-image.jpg">
+<meta property="og:image:secure_url" content="https://eurovantage.work.gd/image/og-image.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support">
 
-<!-- ✅ Twitter -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style." />
-<meta name="twitter:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage." />
-<meta name="twitter:image" content="https://i.postimg.cc/qRrKbbyV/Banner.png" />
+<!-- ✅ Twitter / X -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
+<meta name="twitter:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage.">
+<meta name="twitter:image" content="https://eurovantage.work.gd/image/og-image.jpg">
 
-<link rel="icon" href="/images/favicon.png" />
+<!-- ✅ Favicon -->
+<link rel="icon" href="/images/favicon.png">
      <style>
 :root {
   --gold: #d4af37;
