--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <meta name="twitter:image" content="https://eurovantage.work.gd/image/og-image.jpg">
 
 <!-- ✅ Favicon -->
-<link rel="icon" href="/images/favicon.png">
+<link rel="icon" href="/image/favicon.png">
      <style>
 :root {
   --gold: #d4af37;
