--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>EuroVantage — Advance with Confidence. Arrive in Style.</title>
 
 <!-- ✅ SEO Meta -->
-<!-- ✅ SEO Meta -->
 <meta name="title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta name="description" content="EuroVantage connects skilled professionals with verified European work and travel opportunities. Advance your career with confidence and arrive in style.">
 <meta name="keywords" content="EuroVantage, European jobs, work abroad, visa support, travel agency, Ghana jobs, recruitment Europe, job placement, overseas work">
@@ -49,8 +48,6 @@
 <meta name="twitter:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage.">
 <meta name="twitter:image" content="https://eurovantage.work.gd/image/og-image.jpg">
 
-<!-- ✅ Favicon -->
-<link rel="icon" href="/image/favicon.png" type="image/png">
      <style>
 :root {
   --gold: #d4af37;
@@ -565,12 +562,6 @@ header h1 {
 </style>
 </head>
 <body>
-    
-    <!-- ✅ Hidden SEO Image (for Google Images indexing) -->
-<img src="https://i.postimg.cc/2y9bgmsX/file-000000003a4071f589514f7a31460156-(1).png"
-     alt="EuroVantage European job opportunities"
-     loading="lazy"
-     style="display:none">
 
 <header>
          
@@ -923,7 +914,7 @@ document.addEventListener("DOMContentLoaded", () => {
     setInterval(() => {
       new Notification("💼 New European Jobs Available", {
         body: "Check the latest verified job openings on EuroVantage.",
-        icon: "https://eurovantage.work.gd/images/eurovantage-hero.jpg"
+        icon: "https://eurovantage.work.gd/image/og-image.jpg"
       });
     }, 1000 * 60 * 60 * 6); // every 6 hours
   }
@@ -935,7 +926,7 @@ document.addEventListener("DOMContentLoaded", () => {
         startJobNotifications();
         new Notification("✅ Notifications Enabled!", {
           body: "You'll now receive updates on new job openings.",
-          icon: "https://eurovantage.work.gd/images/eurovantage-hero.jpg"
+          icon: "https://eurovantage.work.gd/image/og-image.jpg"
         });
       }
       closePushPrompt();
