--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <meta property="og:site_name" content="EuroVantage">
 <meta property="og:locale" content="en_US">
 
-<meta property="og:image" content="https://eurovantage.work.gd/image/og-image.jpg">
-<meta property="og:image:secure_url" content="https://eurovantage.work.gd/image/og-image.jpg">
+<meta property="og:image" content="https://i.postimg.cc/15CBxc5J/1000186382.png">
+<meta property="og:image:secure_url" content="https://i.postimg.cc/15CBxc5J/1000186382.png">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
