--- a/index.html
+++ b/index.html
@@ -952,6 +952,16 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 
 <script>
+// Register Service Worker
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => console.log('Service Worker registered', reg))
+      .catch(err => console.log('Service Worker registration failed', err));
+  });
+}
+
+// PWA Install Prompt
 let deferredPrompt;
 const installBtn = document.getElementById("installApp");
 
