--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <meta property="og:url" content="https://eurovantage.work.gd/">
 <meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta property="og:description" content="Your trusted pathway to verified European jobs and visa support.">
-<meta property="og:image" content="https://eurovantage.work.gd/media/og-main.jpg">
-<meta property="og:image:secure_url" content="https://eurovantage.work.gd/media/og-main.jpg">
-<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image" content="https://eurovantage.work.gd/og-image.png">
+<meta property="og:image:secure_url" content="https://eurovantage.work.gd/og-image.png">
+<meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
@@ -27,9 +27,8 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta name="twitter:description" content="Verified European jobs and visa support.">
-<meta name="twitter:image" content="https://eurovantage.work.gd/media/og-main.jpg">
-
-     <style>
+<meta name="twitter:image" content="https://eurovantage.work.gd/og-image.png">
+<style>
 :root {
   --gold: #d4af37;
   --dark: #050505;
