--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
 <meta name="keywords" content="EuroVantage, European jobs, work abroad, visa support, recruitment Europe">
 
 <!-- Open Graph (WhatsApp, Facebook, LinkedIn) -->
-<meta property="og:type" content="website">
 <meta property="og:url" content="https://eurovantage.work.gd/">
+<meta property="og:type" content="website">
 <meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
-<meta property="og:description" content="Your trusted pathway to verified European jobs and visa support.">
+<meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage.">
 <meta property="og:image" content="https://eurovantage.work.gd/og-image.png">
-<meta property="og:image:secure_url" content="https://eurovantage.work.gd/og-image.png">
-<meta property="og:image:type" content="image/png">
+<meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
-<!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
-<meta name="twitter:description" content="Verified European jobs and visa support.">
+<meta name="twitter:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage.">
 <meta name="twitter:image" content="https://eurovantage.work.gd/og-image.png">
 <style>
 :root {
