--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today with EuroVantage.">
-<meta property="og:image" content="https://eurovantage.work.gd/og-image.png">
-<meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support">
+
+<meta property="og:image" content="https://eurovantage.work.gd/og-image-v2.jpg">
+<meta property="og:image:secure_url" content="https://eurovantage.work.gd/og-image-v2.jpg">
+<meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="EuroVantage – Verified European Jobs and Visa Support">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
